--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node -r esm app.js",
+    "start": "source env.sh;node -r esm app.js",
     "test": "exit 0"
   },
   "author": "",
